refactor: disable graalvm + fix shared client usage